--- a/themes/blackburn/layouts/partials/head.html
+++ b/themes/blackburn/layouts/partials/head.html
@@ -28,6 +28,7 @@
 
   <!-- Icons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/custom.css">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
