--- a/themes/blackburn/layouts/partials/social.html
+++ b/themes/blackburn/layouts/partials/social.html
@@ -3,7 +3,7 @@
 
     {{ if .RSSLink }}
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="{{ .RSSLink }}"><i class="fa fa-rss fa-fw"></i>RSS</a>
+      <a class="pure-menu-link" href="{{ .RSSLink }}"><i class="iconfont icon-rss"></i>RSS</a>
     </li>
     {{ end }}
 
@@ -11,7 +11,7 @@
 
     {{ with .Site.Social.twitter }}
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="https://twitter.com/{{ . }}" target="_blank"><i class="fa fa-twitter-square fa-fw"></i>Twitter</a>
+      <a class="pure-menu-link" href="https://twitter.com/{{ . }}" target="_blank"><i class="iconfont icon-twitter"></i>Twitter</a>
     </li>
     {{ end }}
 
@@ -35,7 +35,7 @@
 
     {{ with .Site.Social.weibo }}
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="http://weibo.com/{{ . }}" target="_blank"><i class="fa fa-weibo fa-fw"></i>Weibo</a>
+      <a class="pure-menu-link" href="http://weibo.com/{{ . }}" target="_blank"><i class="iconfont icon-weibo"></i>Weibo</a>
     </li>
     {{ end }}
 
@@ -49,7 +49,7 @@
 
     {{ with .Site.Social.instagram }}
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="https://instagram.com/{{ . }}" target="_blank"><i class="fa fa-instagram fa-fw"></i>Instagram</a>
+      <a class="pure-menu-link" href="https://instagram.com/{{ . }}" target="_blank"><i class="iconfont icon-instagram"></i>Instagram</a>
     </li>
     {{ end }}
 
@@ -127,7 +127,7 @@
 
     {{ with .Site.Social.github }}
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="https://github.com/{{ . }}" target="_blank"><i class="fa fa-github-square fa-fw"></i>GitHub</a>
+      <a class="pure-menu-link" href="https://github.com/{{ . }}" target="_blank"><i class="iconfont icon-github"></i>GitHub</a>
     </li>
     {{ end }}
 
@@ -157,7 +157,7 @@
 
     {{ with .Site.Social.wikipedia }}
     <li class="pure-menu-item">
-      <a class="pure-menu-link" href="https://zh.wikipedia.org/wiki/User:{{ . }}" target="_blank"><i class="fa fa-wikipedia-w fa-fw"></i>Wikipedia</a>
+      <a class="pure-menu-link" href="https://zh.wikipedia.org/wiki/User:{{ . }}" target="_blank"><i class="iconfont icon-wikipedia"></i>Wikipedia</a>
     </li>
     {{ end }}
 
