--- a/themes/blackburn/layouts/partials/head.html
+++ b/themes/blackburn/layouts/partials/head.html
@@ -41,6 +41,10 @@
             enable_page_level_ads: true
        });
   </script>
+
+  <!-- Social-share -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/css/share.min.css"  crossorigin="anonymous" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/social-share.js/1.0.16/js/social-share.min.js" integrity="sha256-fGPu+icKh985TLPhO2v68U7i0CW0dE4kiR06RN4O6jo=" crossorigin="anonymous"></script>
   
   <!-- RSS -->
   {{ if .RSSLink }}
