add the gitalk widget support and modify the about page

--- a/themes/blackburn/layouts/post/single.html
+++ b/themes/blackburn/layouts/post/single.html
@@ -20,9 +20,9 @@
   <br/><br/>
   <div class="social-share" data-sites="wechat,weibo,twitter,facebook,douban" data-mobile-sites="wechat,weibo,twitter,facebook,douban"></div>
 
-  {{ partial "prev_next_post.html" . }}
+  {{ partial "gitalk.html" . }}
 
-  {{ partial "disqus.html" . }}
+  {{ partial "prev_next_post.html" . }}
 
 </div>
 
